--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -22,11 +22,13 @@
 
     .sidebar-wrapper{
         position: relative;
-        height: calc(100vh - 75px);
+        height: calc(100vh - 64px);
         overflow: auto;
         width: 260px;
         z-index: 4;
         padding-bottom: 100px;
+        background-color: $default-nav-color;
+
 
         .dropdown .dropdown-backdrop{
           display: none !important;
@@ -77,7 +79,7 @@
 
             > a{
                 margin: 10px 15px 0;
-                color: $white-color;
+                color: $black-color;
                 display: block;
                 text-decoration: none;
                 position: relative;
@@ -113,6 +115,8 @@
             text-align: center;
             color: $opacity-5;
             position: relative;
+            color: $black-color;
+              
         }
 
         p {
@@ -147,6 +151,7 @@
             display: block;
             background: #FFFFFF;
             opacity: 1;
+            
         }
     }
 
@@ -154,6 +159,8 @@
         position: relative;
         padding: 7px $padding-base-horizontal;
         z-index: 4;
+        background-color: $default-nav-color;
+
 
         a.logo-mini,
         a.logo-normal{
@@ -183,7 +190,7 @@
             right: 15px;
             height: 1px;
             width: calc(100% - 30px);
-            background-color: $opacity-5;
+            background-color: #c2bfbf;
 
         }
 
@@ -202,7 +209,7 @@
             display: block;
             white-space: nowrap;
             font-size: $font-size-large;
-            color: $white-color;
+            color: $black-color;
             text-decoration: none;
             font-weight: $font-weight-normal;
             line-height: 30px;
