--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
@@ -29,6 +29,8 @@ $hr-line:                    rgba(0,0,0, .1) !default;
 $light-gray:                 #E3E3E3 !default;
 $medium-gray:                #DDDDDD !default;
 $dark-gray:                  #9A9A9A !default;
+$red-gray:                   #F86363 !default;
+$yellow-gray:                #F4DE88 !default;
 
 $table-line-color:           #ccc !default;
 $muted-color:                #a49e93 !default;
@@ -62,11 +64,12 @@ $placeholder-gray:           rgba(210, 210, 210, 1)  !default;
 $default-color:              #66615B !default;
 $default-bg:                 #66615B !default;
 $default-states-color:       #403D39 !default;
+$default-nav-color:          #E66767 !default;
 
 $smoke-bg:                   #F5F5F5 !default;
 $pale-bg:                    #FFFCF5 !default;
 $medium-pale-bg:             #F1EAE0 !default;
-$default-body-bg:                 #f4f3ef !default;
+$default-body-bg:            #f4f3ef !default;
 
 $primary-color:              #51cbce !default;
 $primary-states-color:       darken($primary-color, 10%) !default;
@@ -105,10 +108,11 @@ $new-green:           #87CB16;
 $new-orange:          #FFA534;
 $new-dark-blue:       #1F77D0;
 $new-black:           #5e5e5e;
+$new-brown:           #763C17;
 
-$orange-color:               #f96332 !default;
-$color-red-error: rgb(185, 74, 72) !default;
-$color-grey-arrow: rgba(204, 204, 204, 0.2) !default;
+$orange-color:        #f96332 !default;
+$color-red-error:     rgb(185, 74, 72) !default;
+$color-grey-arrow:    rgba(204, 204, 204, 0.2) !default;
 
 $bg-nude:               #FFFCF5 !default;
 $bg-primary:            lighten($primary-color, 7%) !default;
