--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -292,7 +292,7 @@
         }
 
         > li > a:focus{
-            background: rgba(200, 200, 200, 0.2);
+            background: rgba(200, 200, 200, 0.1);
         }
     }
 }
@@ -302,7 +302,9 @@
     position: relative;
     float: right;
     width: $sidebar-width;
-    background-color: #f4f3ef;;
+    // background-color: #bab8afc2;
+    background-color: rgb(255, 255, 255);
+    background-color: rgba(208, 208, 247, 0.395) !important;
 
 
     @include transition (0.50s, cubic-bezier(0.685, 0.0473, 0.346, 1));
