--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_typography.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_typography.scss
@@ -106,7 +106,7 @@ p{
 
 .text-primary,
 a.text-primary:focus, a.text-primary:hover {
-  color: $brand-primary !important;
+  color: $card-font-brown !important;
 }
 .text-info,
 a.text-info:focus, a.text-info:hover {
