--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
@@ -64,7 +64,7 @@ $placeholder-gray:           rgba(210, 210, 210, 1)  !default;
 $default-color:              #66615B !default;
 $default-bg:                 #66615B !default;
 $default-states-color:       #403D39 !default;
-$default-nav-color:          #E66767 !default;
+$default-nav-color:          #EDB8B8 !default;
 
 $smoke-bg:                   #F5F5F5 !default;
 $pale-bg:                    #FFFCF5 !default;
