--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -19,6 +19,7 @@
     left: 0;
     z-index: 1030;
     border-right: 1px solid #ddd;
+    
 
     .sidebar-wrapper{
         position: relative;
@@ -27,7 +28,7 @@
         width: 260px;
         z-index: 4;
         padding-bottom: 100px;
-        background-color: $default-nav-color;
+        background-color: $new-brown;
 
 
         .dropdown .dropdown-backdrop{
@@ -36,6 +37,17 @@
 
         .navbar-form{
             border: none;
+        }
+
+        .nav{
+
+            li{
+                &:hover{
+                    background-color: #EDB8B8;   
+                    color: black;              
+                }
+               
+            }
         }
     }
 
@@ -59,7 +71,7 @@
       img{
           width: 60px;
           height: 60px;
-      }
+        }
     }
 
     .nav{
@@ -79,7 +91,7 @@
 
             > a{
                 margin: 10px 15px 0;
-                color: $black-color;
+                color: $white-color;
                 display: block;
                 text-decoration: none;
                 position: relative;
@@ -106,6 +118,8 @@
             }
         }
 
+        
+
         i{
             font-size: 24px;
             float: left;
@@ -115,7 +129,7 @@
             text-align: center;
             color: $opacity-5;
             position: relative;
-            color: $black-color;
+            color: $white-color;
               
         }
 
@@ -159,7 +173,7 @@
         position: relative;
         padding: 7px $padding-base-horizontal;
         z-index: 4;
-        background-color: $default-nav-color;
+        background-color: $new-brown;
 
 
         a.logo-mini,
@@ -209,7 +223,7 @@
             display: block;
             white-space: nowrap;
             font-size: $font-size-large;
-            color: $black-color;
+            color: $white-color;
             text-decoration: none;
             font-weight: $font-weight-normal;
             line-height: 30px;
@@ -304,7 +318,7 @@
     width: $sidebar-width;
     // background-color: #bab8afc2;
     background-color: rgb(255, 255, 255);
-    background-color: rgba(208, 208, 247, 0.395) !important;
+    background-color: rgba(222, 177, 194, 0.304) !important;
 
 
     @include transition (0.50s, cubic-bezier(0.685, 0.0473, 0.346, 1));
