--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/cards/_card-user.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/cards/_card-user.scss
@@ -6,6 +6,18 @@
         border-radius: 12px;
       }
     }
+    .image-upload{
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 1px solid ;
+      cursor: pointer;
+      input {
+        display: none;
+      }
+    }
+
+
 
     .author{
         text-align: center;
@@ -20,8 +32,9 @@
     .avatar{
         width: 124px;
         height: 124px;
-        border: 1px solid $white-color;
+        border: 1px solid $black-color;
         position: relative;
+       
     }
 
     .card-body{
