--- a/Webapp/public/client/src/assets/scss/blk-design-system-react.scss
+++ b/Webapp/public/client/src/assets/scss/blk-design-system-react.scss
@@ -66,6 +66,7 @@ $asset-base-path: "../../../../assets" !default;
 
 // Custom components
 @import "blk-design-system-react/react/cardbody.scss";
+@import "blk-design-system-react/react/bodytab.scss";
 @import "blk-design-system-react/custom/alerts.scss";
 @import "blk-design-system-react/custom/buttons.scss";
 @import "blk-design-system-react/custom/dropdown.scss";
