--- a/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_type.scss
+++ b/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_type.scss
@@ -88,7 +88,7 @@ p{
   margin-top: 30px;
   margin-bottom: 25px;
   font-weight: $font-weight-bold;
-  color: $default;
+  color: $white;
 
 
     &.title-up{
