--- a/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_card.scss
+++ b/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_card.scss
@@ -24,7 +24,7 @@
       }
 
       .card-title {
-        color: $white;
+        color: $black;
         text-transform: inherit;
         font-weight: $font-weight-light;
         margin-bottom: .75rem;
