--- a/Webapp/public/client/src/assets/scss/blk-design-system-react.scss
+++ b/Webapp/public/client/src/assets/scss/blk-design-system-react.scss
@@ -66,7 +66,9 @@ $asset-base-path: "../../../../assets" !default;
 
 // Custom components
 @import "blk-design-system-react/react/cardbody.scss";
+@import "blk-design-system-react/react/manshirt.scss";
 @import "blk-design-system-react/react/bodytab.scss";
+@import "blk-design-system-react/react/message.scss";
 @import "blk-design-system-react/react/indexnavbar.scss";
 @import "blk-design-system-react/custom/alerts.scss";
 @import "blk-design-system-react/custom/buttons.scss";
