--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_tables.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_tables.scss
@@ -35,6 +35,10 @@
       font-weight: 300;
     }
 
+    > tbody > tr{
+        cursor: pointer;
+    }
+
     .card-tasks .card-body &{
         margin-bottom: 0;
 
