--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_variables.scss
@@ -109,6 +109,7 @@ $new-orange:          #FFA534;
 $new-dark-blue:       #1F77D0;
 $new-black:           #5e5e5e;
 $new-brown:           #7b3c2d;
+$new-brown-gray:      #d78b78;
 
 $orange-color:        #f96332 !default;
 $color-red-error:     rgb(185, 74, 72) !default;
