--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_navbar.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_navbar.scss
@@ -4,6 +4,7 @@
     min-height: 53px;
     margin-bottom: 20px;
 
+
     a{
         vertical-align: middle;
 
@@ -16,13 +17,21 @@
         }
     }
 
+    .no-border{
+        .btn-tk{
+            border: none;
+            background-color: rgba(222, 222, 222, 0.3);
+        }
+
+    }
+
 
 
     &.bg-white{
       .input-group .form-control,
       .input-group.no-border .form-control{
         color: $default-color;
-
+            
         @include placeholder(){
           color: $default-color;
         };
