--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_buttons.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_buttons.scss
@@ -270,3 +270,19 @@
     }
 
 }
+
+.dropbtn {
+    background: linear-gradient(90deg, rgba(75, 18, 2, 0.832) 0%, rgba(119, 29, 3, 0.775) 48%, #923604c0 99%);    
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    height: 50px;
+    &:hover{
+        background: linear-gradient(90deg, rgba(75, 18, 2, 0.608) 0%, rgba(119, 28, 3, 0.553) 48%, #9236048c 99%);    
+        color: black;
+    }
+  }
