--- a/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_footer.scss
+++ b/Webapp/public/client/src/assets/scss/blk-design-system-react/custom/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
-    padding: 50px 0;
+    padding: 20px 0;
     // border-top: 2px solid #435DB5;
-    background: radial-gradient(ellipse at bottom, #c34545 30%, #ff0052 80%);
+    background: radial-gradient(ellipse at bottom, #5233ff 30%, #cf52b4 80%);
 
     [class*="container-"] {
       padding: 0;
