WIP: 0f21406 WIP: 11385f3 add productdata

--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/login/_login.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/login/_login.scss
@@ -11,8 +11,8 @@
         background-color: white;
         border-radius: 15px;
         padding: 20px;
-        margin: 50px 350px 50px 350px;
-        // position: absolute;
+        width: 60%;
+        position: absolute;
         .text-login{
             font-family: 'Montserrat';
             font-size: 2.8rem;
