--- a/Webapp/public/admin/src/assets/scss/paper-dashboard.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard.scss
@@ -59,3 +59,5 @@
 @import "paper-dashboard/signup/signup";
 @import "paper-dashboard/giohang/giohang";
 @import "paper-dashboard/dropdown-sp/dropdown-sp";
+@import "paper-dashboard/cards/card-listproducts";
+
