--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/cards/_card-listproducts.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/cards/_card-listproducts.scss
@@ -1,7 +1,7 @@
-.table-products{
-    margin-left: 200px;
-    .card-listproduct{
-        width: auto;
+#listproduct{
+  
+        background: linear-gradient(187deg, rgb(45, 184, 194) 0%, rgb(144, 81, 232) 48%, rgb(195, 75, 216) 99%);
 
-    }
+       
+    
 }
