--- a/Webapp/public/admin/src/assets/scss/paper-dashboard/_buttons.scss
+++ b/Webapp/public/admin/src/assets/scss/paper-dashboard/_buttons.scss
@@ -280,3 +280,53 @@
     margin-bottom: 15px;
     height: 50px;
   }
+
+  .btn-plus{
+    border-radius: 14px;
+    background-color: #28a745f2;
+    color: white;
+    font-size: 0.85rem;
+    border: none;
+    &:hover{
+        background-color: #28a746a2;
+    }
+  }
+
+  .btn-minus{
+    border-radius: 14px;
+    background-color: #c10c0cf2;
+    color: white;
+    font-size: 0.85rem;
+    border: none;
+    margin-left: 10px;
+    &:hover{
+        background-color: #c10c0ca8;
+
+    }
+  }
+
+  .btn-edit{
+    width: 50px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #7b0606;
+    color: white;
+    margin: 10px 0px 15px;
+    &:hover{
+        background-color: #7b0606b1;
+    }
+  }
+
+  .btn-back{
+    width: 50px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #7b0606;
+    color: white;
+    margin: 10px 0px 15px 75%;
+    &:hover{
+        background-color: #7b0606b1;
+    }
+  }
